[package]
name = "seismograph"
version = "0.1.0"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
ctrlc = "3.1.7"
indicatif = "0.15.0"
libc = "0.2.82"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"
