[package]
name = "seismograph"
version = "0.1.0"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = { version = "0.4.19", features = ["serde"] }
ctrlc = "3.1.7"
hex = "0.4.2"
indicatif = "0.15.0"
lazy_static = "1.4.0"
libc = "0.2.82"
perfcnt = { path = "../rust-perfcnt" } #"0.6.0"
plotters = "0.3.0"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
sha2 = "0.9.2"
structopt = "0.3.21"
walkdir = "2.3.1"
x86 = "0.34"

[build-dependencies]
hex = "0.4.2"
walkdir = "2.3.1"
sha2 = "0.9.2"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
